--- a/Javascript/闭包/闭包.md
+++ b/Javascript/闭包/闭包.md
@@ -1,4 +1,4 @@
-# 闭包
+# 闭包（Closure）
 
 ## 闭包的定义
 
@@ -19,14 +19,15 @@
 ```
 
 ## 代码实现
+
 ```js
-			function outerFn() {
-				const outerVar = { name: "吕威鹏", age: 18 };
-				function innerFn() {
-					console.log("引用的外部函数变量>>>", outerVar);
-				}
-				return innerFn;
-			}
-			const getVar = outerFn();
-			getVar(); // 这里虽然 outerFn 执行完毕，但 innerFn 依然能访问 outerVar
+function outerFn() {
+	const outerVar = { name: "吕威鹏", age: 18 };
+	function innerFn() {
+		console.log("引用的外部函数变量>>>", outerVar);
+	}
+	return innerFn;
+}
+const getVar = outerFn();
+getVar(); // 这里虽然 outerFn 执行完毕，但 innerFn 依然能访问 outerVar
 ```
