✨ feat:新增事件循环

--- a/Javascript/事件循环/事件循环.md
+++ b/Javascript/事件循环/事件循环.md
@@ -1,1 +1,152 @@
-# 事件循环
+# 事件循环（EventLoop）
+
+## 事件循环的定义
+
+事件循环是 JavaScript 用于异步操作时确定事件优先级的一种工作机制。
+
+## 微任务和宏任务
+
+| 分类名称 | 常见任务                                                                                           | 执行环境                   | 备注                                                                 |
+| -------- | -------------------------------------------------------------------------------------------------- | -------------------------- | -------------------------------------------------------------------- |
+| 微任务   | Promise.then()/.catch()/.finally(), await 后未解决的 Promise, queueMicrotask(), process.nextTick() | JS 引擎                    | process.nextTick() 优先级最高; 微任务队列每次清空后才执行宏任务      |
+| 宏任务   | setTimeout(), setInterval(), requestAnimationFrame(), setImmediate(), I/O, script 代码块           | 宿主环境（如浏览器、Node） | requestAnimationFrame() 在渲染前执行, 浏览器渲染可能发生在宏任务之间 |
+
+## 事件循环工作流程
+
+```txt
+1.JS将同步代码压入调用栈（callStack），按LIFO顺序立即执行，将异步代码中的微任务放入微任务队列（microTaskQueue），宏任务放入宏任务队列（taskQueue）等待执行
+
+2.同步代码执行完后，JS会检查微任务队列，按FIFO顺序将其中的同步代码压入调用栈立即执行，将异步代码再次分类放入队列等待下一轮事件循环
+
+3.微任务队列处理完后，再检查宏任务队列，按FIFO顺序将其中的同步代码压入调用栈立即执行，将异步代码分类放入队列等待下一轮事件循环
+
+4.事件循环不断按上述顺序工作，直到所有任务处理完毕
+```
+
+## 案例解读
+
+```javascript
+const p1 = new Promise((resolve) => {
+	console.log("2"); // 同步执行
+	resolve("p1");
+}).then((val) => {
+	console.log("3"); // 微任务
+	setTimeout(() => {
+		// 宏任务（100ms后）
+		console.log(val); // 输出 "p1"
+	}, 100);
+});
+
+console.log("1"); // 同步执行
+
+setTimeout(() => {
+	// 宏任务（0ms后）
+	console.log("4");
+}, 0);
+
+console.log("5"); // 同步执行
+
+async function foo() {
+	console.log("6"); // 同步执行
+	await console.log("10"); // 同步执行，返回 undefined
+	await new Promise((resolve) => {
+		console.log("8"); // 同步执行
+		resolve("p2");
+	}).then((val) => {
+		// 微任务
+		return val;
+	});
+	await console.log("7"); // 同步执行，返回 undefined
+}
+
+console.log(foo()); // 调用 foo()，返回 Promise<pending>
+```
+
+### **执行步骤解析**
+
+#### **1. 同步代码执行阶段**
+
+- **创建 `p1` 的 Promise**：
+
+  - `new Promise` 的执行器函数同步执行 → 输出 `2`。
+  - `resolve("p1")` 将 Promise 状态设为 `fulfilled`，`.then()` 回调被加入**微任务队列**。
+
+- **后续同步代码**：
+
+  - `console.log("1")` → 输出 `1`。
+  - `setTimeout(() => console.log("4"), 0)` → 注册宏任务（0ms 后执行）。
+  - `console.log("5")` → 输出 `5`。
+
+- **调用 `foo()`**：
+  - `foo()` 函数同步执行：
+    - `console.log("6")` → 输出 `6`。
+    - `await console.log("10")`：
+      - `console.log("10")` 同步执行 → 输出 `10`，返回 `undefined`。
+      - `await undefined` 等价于 `await Promise.resolve(undefined)`，`foo()` 暂停执行，**后续代码加入微任务队列**。
+  - `console.log(foo())`：
+    - `foo()` 返回一个 **pending 状态的 Promise** → 输出 `Promise { <pending> }`。
+
+**同步阶段输出**：  
+`2 → 1 → 5 → 6 → 10 → Promise { <pending> }`
+
+#### **2. 微任务队列处理阶段**
+
+- **处理 `p1` 的 `.then()` 回调**（微任务）：
+
+  - `console.log("3")` → 输出 `3`。
+  - `setTimeout(() => console.log(val), 100)` → 注册宏任务（100ms 后执行）。
+
+- **处理 `foo()` 中第一个 `await` 后的代码**（微任务）：
+
+  - 创建新 Promise，执行器函数同步执行 → 输出 `8`。
+  - `resolve("p2")` 将 Promise 状态设为 `fulfilled`，`.then()` 回调被加入**微任务队列**。
+
+- **处理新 Promise 的 `.then()` 回调**（微任务）：
+
+  - `return val` 返回 `"p2"`，`await` 等待其解析，`foo()` 继续暂停，**后续代码加入微任务队列**。
+
+- **处理 `foo()` 中第二个 `await` 后的代码**（微任务）：
+  - `console.log("7")` → 输出 `7`，返回 `undefined`，`foo()` 执行完毕，其返回的 Promise 状态变为 `fulfilled`。
+
+**微任务阶段输出**：  
+`3 → 8 → 7`
+
+#### **3. 宏任务队列处理阶段**
+
+- **处理 `setTimeout(() => console.log("4"), 0)`**（宏任务）：
+  - `console.log("4")` → 输出 `4`。
+
+**宏任务阶段输出**：  
+`4`
+
+#### **4. 100ms 后处理延迟的宏任务**
+
+- **处理 `setTimeout(() => console.log(val), 100)`**（宏任务）：
+  - `val` 为 `"p1"` → 输出 `p1`。
+
+**延迟输出**：  
+`p1`
+
+### **最终输出顺序**
+
+```
+2 → 1 → 5 → 6 → 10 → Promise { <pending> } → 3 → 8 → 7 → 4 → [100ms后] p1
+```
+
+### **关键点总结**
+
+1. **同步代码优先执行**：  
+   所有同步代码（包括 Promise 执行器、`console.log`、`foo()` 函数内的同步部分）在调用栈中按顺序执行。
+
+2. **微任务优先级高于宏任务**：
+
+   - Promise 的 `.then()` 回调和 `await` 后续代码作为微任务，在同步代码执行完毕后立即处理。
+   - 微任务队列会被**完全清空**后才会执行宏任务。
+
+3. **`async` 函数的 Promise 返回值**：  
+   `foo()` 调用后立即返回 pending 状态的 Promise，其内部 `await` 逻辑在微任务中异步执行。
+
+4. **宏任务按 FIFO 执行**：  
+   `setTimeout(0)` 的回调在微任务清空后执行，`setTimeout(100)` 的回调在延迟后执行。
+
+通过事件循环的“同步 → 微任务 → 宏任务”流程，可清晰推导出代码的执行顺序和输出结果。
