--- a/Javascript/事件循环/事件循环.md
+++ b/Javascript/事件循环/事件循环.md
@@ -62,9 +62,9 @@ async function foo() {
 console.log(foo()); // 调用 foo()，返回 Promise<pending>
 ```
 
-### **执行步骤解析**
+### 执行步骤解析
 
-#### **1. 同步代码执行阶段**
+#### 1. 同步代码执行阶段
 
 - **创建 `p1` 的 Promise**：
 
@@ -89,7 +89,7 @@ console.log(foo()); // 调用 foo()，返回 Promise<pending>
 **同步阶段输出**：  
 `2 → 1 → 5 → 6 → 10 → Promise { <pending> }`
 
-#### **2. 微任务队列处理阶段**
+#### 2. 微任务队列处理阶段
 
 - **处理 `p1` 的 `.then()` 回调**（微任务）：
 
@@ -111,7 +111,7 @@ console.log(foo()); // 调用 foo()，返回 Promise<pending>
 **微任务阶段输出**：  
 `3 → 8 → 7`
 
-#### **3. 宏任务队列处理阶段**
+#### 3. 宏任务队列处理阶段
 
 - **处理 `setTimeout(() => console.log("4"), 0)`**（宏任务）：
   - `console.log("4")` → 输出 `4`。
@@ -119,7 +119,7 @@ console.log(foo()); // 调用 foo()，返回 Promise<pending>
 **宏任务阶段输出**：  
 `4`
 
-#### **4. 100ms 后处理延迟的宏任务**
+#### 4. 100ms 后处理延迟的宏任务
 
 - **处理 `setTimeout(() => console.log(val), 100)`**（宏任务）：
   - `val` 为 `"p1"` → 输出 `p1`。
@@ -127,26 +127,26 @@ console.log(foo()); // 调用 foo()，返回 Promise<pending>
 **延迟输出**：  
 `p1`
 
-### **最终输出顺序**
+### 最终输出顺序
 
 ```
 2 → 1 → 5 → 6 → 10 → Promise { <pending> } → 3 → 8 → 7 → 4 → [100ms后] p1
 ```
 
-### **关键点总结**
+### 关键点总结
 
-1. **同步代码优先执行**：  
+1. 同步代码优先执行：  
    所有同步代码（包括 Promise 执行器、`console.log`、`foo()` 函数内的同步部分）在调用栈中按顺序执行。
 
-2. **微任务优先级高于宏任务**：
+2. 微任务优先级高于宏任务：
 
    - Promise 的 `.then()` 回调和 `await` 后续代码作为微任务，在同步代码执行完毕后立即处理。
    - 微任务队列会被**完全清空**后才会执行宏任务。
 
-3. **`async` 函数的 Promise 返回值**：  
+3. `async` 函数的 Promise 返回值：  
    `foo()` 调用后立即返回 pending 状态的 Promise，其内部 `await` 逻辑在微任务中异步执行。
 
-4. **宏任务按 FIFO 执行**：  
+4. 宏任务按 FIFO 执行：  
    `setTimeout(0)` 的回调在微任务清空后执行，`setTimeout(100)` 的回调在延迟后执行。
 
 通过事件循环的“同步 → 微任务 → 宏任务”流程，可清晰推导出代码的执行顺序和输出结果。
